# signal-mcp

./: CLAUDE.md  HANDOFF_REPORT.md  README.md  main.py  pyproject.toml
docs/: PLAN.md  UPSTREAM_ASKS.md  desktop-integration.md  mcp-server-research.md
src/goose_signal_gateway/: acp_client.py  cli.py  config.py  gateway.py  pairing.py  session_map.py  signal_client.py
src/hollerback/: acp_client.py  approvals.py  cli.py  config.py  dedup.py  gateway.py  goosed_client.py  mcp_server.py  message_buffer.py  pairing.py  signal_client.py  signal_lint.py
systemd/: goose-signal-gateway.service  hollerback.service  signal-cli.service
tests/: test_acp_client.py  test_approvals.py  test_cli.py  test_dedup.py  test_gateway.py  test_goosed_discovery.py  test_mcp_server.py  test_pairing.py  test_session_map.py  test_signal_lint.py
