[project]
name = "goose-signal-gateway"
version = "0.1.0"
description = "Bridge Signal Messenger to Goose Desktop via the goosed REST API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "click>=8.3.2",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.scripts]
goose-signal = "goose_signal_gateway.cli:main"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
